--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
         <input type="text" id="mail" placeholder="メールアドレスを入力してください" oninput="saveInput('mail')">
 
         <div class="label">お住まいの地域<span class="required">必須</span></div>
-        <input type="tel" id="region" placeholder="地域を入力してください" oninput="saveInput('region')">
+        <input type="text" id="region" placeholder="地域を入力してください" oninput="saveInput('region')">
 
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
@@ -1011,7 +1011,6 @@
         // 第一希望日、第二希望日、第三希望日でupdateDisplayInfoを呼び出す
         document.getElementById('date1').addEventListener('change', updateDisplayInfo);
         document.getElementById('date2').addEventListener('change', updateDisplayInfo);
-        document.getElementById('date3').addEventListener('change', updateDisplayInfo);
 
         // 日付セルのクリックイベントで希望日時を更新
         document.querySelectorAll('.calendar td').forEach(cell => {
@@ -1274,8 +1273,7 @@
                 selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
                 dates: [
                     document.getElementById('date1').value,
-                    document.getElementById('date2').value,
-                    document.getElementById('date3').value
+                    document.getElementById('date2').value
                 ],
                 message: document.getElementById('message').value.trim()
             };
