--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@
                 return;
             }
 
-            if (!formData.msil) {
+            if (!formData.mail) {
                 alert('メールアドレスを入力してください。');
                 return;
             }
