--- a/index.html
+++ b/index.html
@@ -1284,11 +1284,6 @@
                 return;
             }
 
-            if (!formData.visitCount) {
-                alert('性別を入力してください。');
-                return;
-            }
-
             if (!formData.age) {
                 alert('年齢を入力してください。');
                 return;
@@ -1322,7 +1317,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n\n電話番号：${formData.phone}\n\nご性別：${formData.visitCount}\n\n年齢：${formData.age}\n\nメールアドレス：${formData.mail}\n\nお住まい地域：${formData.region}\n\nメニュー：${formData.selectedSymptom}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\nクーポン：${formData.highschoolCount}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\n《お名前》\n⇒${formData.name}\n\n《電話番号》\n⇒${formData.phone}\n\n《ご性別》\n⇒${formData.visitCount}\n\n《年齢》\n⇒${formData.age}\n\n《メールアドレス》\n⇒${formData.mail}\n\n《お住まい地域》\n⇒${formData.region}\n\n《メニュー》\n⇒${formData.selectedSymptom}\n\n【希望日時】\n・《第一希望日》\n⇒${formatDate(formData.dates[0])}\n\n・《第二希望日》\n⇒${formatDate(formData.dates[1])}\n\n《クーポン》\n⇒${formData.highschoolCount}\n\n《メッセージ》\n⇒${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
