--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,14 @@
     <style>
         /* 右端の細いナビ（固定） */
         .side-nav {
-            position: fixed; /* 画面スクロールしても固定 */
-            right: -5px; /* さらに右へ */
-            top: 80%; /* 画面中央に固定 */
-            transform: translateY(-50%) translateX(20px); /* 中央配置と右ずらし */
+            position: fixed;
+            /* 画面スクロールしても固定 */
+            right: -5px;
+            /* さらに右へ */
+            top: 80%;
+            /* 画面中央に固定 */
+            transform: translateY(-50%) translateX(20px);
+            /* 中央配置と右ずらし */
             background: #88705a;
             display: flex;
             flex-direction: column;
@@ -19,11 +24,13 @@
             padding: 4px;
             border-radius: 10px 0 0 10px;
             z-index: 1000;
-            width: 35px; /* さらに細く */
+            width: 35px;
+            /* さらに細く */
         }
 
         .side-nav a:active {
-            transform: scale(1.0); /* タップした後に元のサイズに戻す */
+            transform: scale(1.0);
+            /* タップした後に元のサイズに戻す */
         }
 
         .side-nav a {
@@ -44,17 +51,22 @@
         }
 
         .side-nav a span {
-            font-size: 24px; /* 矢印をさらに大きく */
+            font-size: 24px;
+            /* 矢印をさらに大きく */
             position: absolute;
-            left: -0px; /* 左端に寄せる */
-            top: 13px; /* さらに下へ */
+            left: -0px;
+            /* 左端に寄せる */
+            top: 13px;
+            /* さらに下へ */
         }
 
         /* スマホ用の微調整 */
         @media (max-width: 600px) {
             .side-nav {
-                right: 2px; /* スマホではさらに右端に */
-                width: 30px; /* もっと細く */
+                right: 2px;
+                /* スマホではさらに右端に */
+                width: 30px;
+                /* もっと細く */
             }
 
             .side-nav a {
@@ -63,10 +75,11 @@
             }
 
             .side-nav a i {
-                font-size: 12px; /* スマホではもっと小さく */
+                font-size: 12px;
+                /* スマホではもっと小さく */
             }
         }
-        
+
         body {
             font-family: 'Poppins', sans-serif;
             background-color: #e7e7e7;
@@ -261,21 +274,24 @@
             cursor: pointer;
             vertical-align: top;
             width: auto;
-            padding-top: 3px; /* ← 追加：少し下にずらす */
+            padding-top: 3px;
+            /* ← 追加：少し下にずらす */
             /* 通常のセルは自動調整 */
             box-sizing: border-box;
             border: 2px solid #696969;
         }
 
         .calendar th:first-child,
-.calendar td:first-child {
-    width: 17%;
-    font-size: 15.5px;
-    text-align: left;
-    padding-left: 5px;
-    padding-top: 2px; /* ← 追加：少し下にずらす */
-    vertical-align: top; /* 必要に応じて top / middle / bottom を調整 */
-}
+        .calendar td:first-child {
+            width: 17%;
+            font-size: 15.5px;
+            text-align: left;
+            padding-left: 5px;
+            padding-top: 2px;
+            /* ← 追加：少し下にずらす */
+            vertical-align: top;
+            /* 必要に応じて top / middle / bottom を調整 */
+        }
 
         .calendar th {
             background-color: #f7f7f7;
@@ -545,22 +561,24 @@
         }
 
         .edit-button {
-    background-color: #ff6b6b;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 5px 10px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    white-space: nowrap; /* 改行を防ぐ */
-    width: 80px; /* 横幅を固定 */
-    text-align: center; /* テキストを中央揃え */
-}
+            background-color: #ff6b6b;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            padding: 5px 10px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            white-space: nowrap;
+            /* 改行を防ぐ */
+            width: 80px;
+            /* 横幅を固定 */
+            text-align: center;
+            /* テキストを中央揃え */
+        }
 
-.edit-button:hover {
-    background-color: #ff4f4f;
-}
-
+        .edit-button:hover {
+            background-color: #ff4f4f;
+        }
 
         /* 100点の予約フォームCSS */
 
@@ -657,55 +675,58 @@
             /* 影も控えめに */
         }
 
-    /* ナビゲーションバー */
-    .sidebar {
-        position: fixed;
-        right: 0;
-        top: 50%;
-        transform: translateY(-50%);
-        background: #1e1e2d;
-        padding: 10px;
-        border-radius: 10px 0 0 10px;
-        z-index: 1000;
-    }
+        /* ナビゲーションバー */
+        .sidebar {
+            position: fixed;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            background: #1e1e2d;
+            padding: 10px;
+            border-radius: 10px 0 0 10px;
+            z-index: 1000;
+        }
 
-    .sidebar a {
-        display: block;
-        padding: 15px;
-        color: white;
-        text-decoration: none;
-        text-align: center;
-        font-size: 14px;
-        margin-bottom: 10px;
-        background: #4a90e2;
-        border-radius: 5px;
-        transition: background 0.3s;
-    }
+        .sidebar a {
+            display: block;
+            padding: 15px;
+            color: white;
+            text-decoration: none;
+            text-align: center;
+            font-size: 14px;
+            margin-bottom: 10px;
+            background: #4a90e2;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
 
-    .sidebar a:hover {
-        background: #357ac4;
-    }
+        .sidebar a:hover {
+            background: #357ac4;
+        }
 
-    /* スクロール用のセクション */
-    .section {
-        padding: 50px 10px;
-        margin-top: 30px;
-    }
-        
-    .info-textopop {
-    width: 100%;
-    margin: 5; /* 左右の余白をなくす */
-    font-size: 13px;
-    color: #000000;
-    line-height: 1.5;
-    text-align: center;
-    word-wrap: break-word;
-    background-color: #eef9f5;
-    padding: 6px;
-    border-radius: 4px;
-    box-sizing: border-box; /* パディングを含めてもはみ出さないように */
-    margin-bottom: 10px; /* 下に10pxの隙間を作る */
-}
+        /* スクロール用のセクション */
+        .section {
+            padding: 50px 10px;
+            margin-top: 30px;
+        }
+
+        .info-textopop {
+            width: 100%;
+            margin: 5;
+            /* 左右の余白をなくす */
+            font-size: 13px;
+            color: #000000;
+            line-height: 1.5;
+            text-align: center;
+            word-wrap: break-word;
+            background-color: #eef9f5;
+            padding: 6px;
+            border-radius: 4px;
+            box-sizing: border-box;
+            /* パディングを含めてもはみ出さないように */
+            margin-bottom: 10px;
+            /* 下に10pxの隙間を作る */
+        }
 
         /* 携帯端末向けのレスポンシブデザイン */
         @media (max-width: 768px) {
@@ -858,8 +879,8 @@
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            'もみほぐし60分': 59,
-            'もみほぐし80分': 79,
+            'もみほぐし60分': 60,
+            'もみほぐし80分': 80,
             'もみほぐし100分': 100,
             'もみほぐし120分': 120
         };
@@ -1225,7 +1246,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbyoRTlhODj4-FNtwQXRHul2OXjlwuGKZitdNJaN-eH4p_pjRGhHUgPibk5lTzzTsK02/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbymWjRcFPhN14e6GMFZgmQ_aX14hQsrP3y0eYiTRqGI4fAUDps9ye8DEASJKl8HoXgA/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
@@ -1258,18 +1279,18 @@
             const table = calendar.querySelector('table tbody');
 
             const times = [
-    '10:00', '10:15', '10:30', '10:45',
-    '11:00', '11:15', '11:30', '11:45',
-    '12:00', '12:15', '12:30', '12:45',
-    '13:00', '13:15', '13:30', '13:45',
-    '14:00', '14:15', '14:30', '14:45',
-    '15:00', '15:15', '15:30', '15:45',
-    '16:00', '16:15', '16:30', '16:45',
-    '17:00', '17:15', '17:30', '17:45',
-    '18:00', '18:15', '18:30', '18:45',
-    '19:00', '19:15', '19:30', '19:45',
-    '20:00'
-];
+                '10:00', '10:15', '10:30', '10:45',
+                '11:00', '11:15', '11:30', '11:45',
+                '12:00', '12:15', '12:30', '12:45',
+                '13:00', '13:15', '13:30', '13:45',
+                '14:00', '14:15', '14:30', '14:45',
+                '15:00', '15:15', '15:30', '15:45',
+                '16:00', '16:15', '16:30', '16:45',
+                '17:00', '17:15', '17:30', '17:45',
+                '18:00', '18:15', '18:30', '18:45',
+                '19:00', '19:15', '19:30', '19:45',
+                '20:00'
+            ];
 
             if (table.rows.length === 0) {
                 for (const time of times) {
@@ -1389,52 +1410,52 @@
                         return slotStart < event.end && event.start < slotEnd;
                     });
 
-// 🔥ここから重要：slotStart～slotEndの間で3つ以上重なる瞬間があるか？
-let overLimit = false;
+                    // 🔥ここから重要：slotStart～slotEndの間で3つ以上重なる瞬間があるか？
+                    let overLimit = false;
 
-// 1分刻みでチェック
-for (let checkTime = new Date(slotStart.getTime()); checkTime < slotEnd; checkTime.setMinutes(checkTime.getMinutes() + 1)) {
-    const overlapping = availability.reduce((acc, slot) => {
-        const eventStart = new Date(slot.startTime);
-        const eventEnd = new Date(slot.endTime);
-        if (slot.title !== "営業日" && eventStart <= checkTime && checkTime < eventEnd) {
-            acc++;
-        }
-        return acc;
-    }, 0);
+                    // 1分刻みでチェック
+                    for (let checkTime = new Date(slotStart.getTime()); checkTime < slotEnd; checkTime.setMinutes(checkTime.getMinutes() + 10)) {
+                        const overlapping = availability.reduce((acc, slot) => {
+                            const eventStart = new Date(slot.startTime);
+                            const eventEnd = new Date(slot.endTime);
+                            if (slot.title !== "営業日" && eventStart <= checkTime && checkTime < eventEnd) {
+                                acc++;
+                            }
+                            return acc;
+                        }, 0);
 
-    if (overlapping >= 2) { // ここが2になったら、これ以上入れたら3つ目になる
-        overLimit = true;
-        break;
-    }
-}
+                        if (overlapping >= 2) { // ここが2になったら、これ以上入れたら3つ目になる
+                            overLimit = true;
+                            break;
+                        }
+                    }
 
-        if (isBusinessEventTime && overLimit) {
-            cell.textContent = '✕';
-            cell.classList.add('unavailable');
-        }
-        else if (isBusinessEventTime) {
-            cell.textContent = '◯';
-            cell.classList.add('available');
-        }
-        else if (businessEventTimes.length > 0) {
-            cell.textContent = '✕';
-            cell.classList.add('unavailable');
-        }
-        else if (isBusinessDay && !overLimit) {
-            cell.textContent = '◯';
-            cell.classList.add('available');
-        }
-        else if (!overLimit) {
-            cell.textContent = '◯';
-            cell.classList.add('available');
-        }
-        else {
-            cell.textContent = '✕';
-            cell.classList.add('unavailable');
-        }
+                    if (isBusinessEventTime && overLimit) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                    }
+                    else if (isBusinessEventTime) {
+                        cell.textContent = '◯';
+                        cell.classList.add('available');
+                    }
+                    else if (businessEventTimes.length > 0) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                    }
+                    else if (isBusinessDay && !overLimit) {
+                        cell.textContent = '◯';
+                        cell.classList.add('available');
+                    }
+                    else if (!overLimit) {
+                        cell.textContent = '◯';
+                        cell.classList.add('available');
+                    }
+                    else {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                    }
 
-        cell.setAttribute('data-date', slotStart.toISOString());
+                    cell.setAttribute('data-date', slotStart.toISOString());
                 }
             }
         }
