--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
         <textarea id="message" rows="1" placeholder="ご記入下さい"></textarea> <!-- メッセージ入力フィールド -->
 
         <div class="label">お電話番号をご記入下さい。</div>
-        <textarea id="message2" rows="1" placeholder="ご記入下さい"></textarea> <!-- メッセージ入力フィールド -->
+        <input type="tel" id="message2" placeholder="電話番号を入力してください" pattern="\d{10,11,12}" inputmode="tel">
 
         <div class="form-group">
             <label for="message3" class="label">お住まいの市町をご選択ください</label>
